--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 
  <!-- navigation code here -->
+ <section class="fixednav">
  <section class="aroundcontainer">
 <section class="containernav">
  <h1>SpaceWalkers</h1>
@@ -29,6 +30,7 @@
   <a href="#">Sign In</a>
 
 </nav>
+</section>
 </section>
 </section>
   <div class="container home">
